docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/datetimepicker.mdx
---
title: DateTimePicker
description: A Jetpack Compose DateTimePicker component for selecting dates and times.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI DateTimePicker matches the official Jetpack Compose [Date Picker](https://developer.android.com/develop/ui/compose/components/datepickers) and [Time Picker](https://developer.android.com/develop/ui/compose/components/time-pickers) APIs and supports date, time, and combined selection.

> **Note:** The date variants render Material's calendar grid and input field, both of which scroll horizontally internally. The parent `Host` must provide a finite width on the horizontal axis, use `matchContents={{ vertical: true }}` together with `style={{ width: '100%' }}` (or any finite width). See [Match contents in Host reference](host/#match-contents) for details.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/datetimepicker/android-light.webp"
  darkSrc="/static/images/expo-ui/datetimepicker/android-dark.webp"
  alt="Material 3 date picker showing a selected date in a calendar grid"
/>

## Installation

<APIInstallSection />

## Usage

### Date picker

<ComponentExample
  title="DatePickerExample.tsx"
  src="/static/images/expo-ui/examples/datetimepicker-date-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/datetimepicker-date-android-dark.webp"
  alt="A Material 3 date picker showing August 2026 with the 14th selected">

```tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function DatePickerExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="date"
        initialDate={selectedDate.toISOString()}
        variant="picker"
      />
    </Host>
  );
}
```

</ComponentExample>

### Time picker

<ComponentExample
  title="TimePickerExample.tsx"
  src="/static/images/expo-ui/examples/datetimepicker-time-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/datetimepicker-time-android-dark.webp"
  alt="A 24-hour time picker dial set to 23:04 with the hour field selected">

```tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function TimePickerExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="hourAndMinute"
        initialDate={selectedDate.toISOString()}
        variant="picker"
      />
    </Host>
  );
}
```

</ComponentExample>

### Input variant

Use `variant="input"` to display the picker as a text input field instead of the default picker UI.

<ComponentExample
  title="InputVariantExample.tsx"
  src="/static/images/expo-ui/examples/datetimepicker-input-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/datetimepicker-input-android-dark.webp"
  alt="A date picker in input mode with a Date text field containing 08/14/2026">

```tsx
import { useState } from 'react';
import { Host, DateTimePicker } from '@expo/ui/jetpack-compose';

export default function InputVariantExample() {
  const [selectedDate, setSelectedDate] = useState(new Date());

  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <DateTimePicker
        onDateSelected={date => {
          setSelectedDate(date);
        }}
        displayedComponents="date"
        initialDate={selectedDate.toISOString()}
        variant="input"
      />
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { DateTimePicker } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/datetimepicker"
  apiName="DateTimePicker"
/>
